Add new books to table

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
 <body>
     <table>
         <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Pages</th>
-            <th>Read?</th>
+            <thead>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Pages</th>
+                <th>Read?</th>
+            </thead>
+            <tbody>
+                
+            </tbody>
         </tr>
     </table>
 </body>
