Add modal for form to add new book

--- a/index.html
+++ b/index.html
@@ -23,5 +23,34 @@
             </tbody>
         </tr>
     </table>
+    <button class="modal-btn">New Book</button>
+    <div class="modal">
+        <div class="modal-content">
+            <span class="close">&times</span>
+            <div class="modal-body">
+                <form action="">
+                    <div class="form-row">
+                        <label for="title">Title</label>
+                        <input id="title" name="title" type="text">
+                    </div>
+                    <div class="form-row">
+                        <label for="author">Author</label>
+                        <input id="author" name="author" type="text">
+                    </div>
+                    <div class="form-row">
+                        <label for="pages">Pages</label>
+                        <input id="read" name="read" type="number">
+                    </div>
+                    <div class="form-row">
+                        <label for="read">Read?</label>
+                        <input id="read" name="read" type="checkbox" value="read">
+                    </div>
+                    <div class="form-row">
+                        <button>Add Book</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
