Add functionality to add new book to library

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                     </div>
                     <div class="form-row">
                         <label for="pages">Pages</label>
-                        <input id="read" name="read" type="number">
+                        <input id="pages" name="pages" type="number">
                     </div>
                     <div class="form-row">
                         <label for="read">Read?</label>
                         <input id="read" name="read" type="checkbox" value="read">
                     </div>
                     <div class="form-row">
-                        <button>Add Book</button>
+                        <button class="submit">Add Book</button>
                     </div>
                 </form>
             </div>
